force-app/main/default/objects/TXN_Log__c/TXN_Log__c.object-meta.xml
<CustomObject>
    <description>Transaction Log table which will hold all the Customer Asset&apos;s transactions from the UpStream systems like ERP, AUTO etc.</description>
    <label>TXN Log</label>
    <nameField>
        <displayFormat>TXN-{00000000}</displayFormat>
        <label>TXN Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TXN Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>