force-app/main/default/objects/TXN_Log__c/fields/Account_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Cust_ID__c</fullName>
    <description>Account Cust ID</description>
    <label>Account Cust ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>