force-app/main/default/objects/TXN_Log__c/fields/Add_On_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Add On Opportunity</description>
    <label>Add On Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TXN Logs</relationshipLabel>
    <relationshipName>TXN_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>