force-app/main/default/objects/TXN_Log__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Describe the Asset Type for a transaction log record</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP_SHIPMENT</fullName>
                <default>true</default>
                <label>ERP_SHIPMENT</label>
            </value>
            <value>
                <fullName>ERP_RECEIPT</fullName>
            </value>
            <value>
                <fullName>ERP_XRS_PLANS</fullName>
            </value>
            <value>
                <fullName>ERP_XRS_APPS</fullName>
            </value>
            <value>
                <fullName>ERP_RN_BILLING</fullName>
            </value>
            <value>
                <fullName>AUTO_FLEET_REDUCTION</fullName>
            </value>
            <value>
                <fullName>AUTO_REACTIVATION</fullName>
            </value>
            <value>
                <fullName>AUTO_TERMINATION</fullName>
            </value>
            <value>
                <fullName>AUTO_TRANSFER_FROM</fullName>
            </value>
            <value>
                <fullName>AUTO_TRANSFER_TO</fullName>
            </value>
            <value>
                <fullName>MANUAL_ES_PLANS</fullName>
            </value>
            <value>
                <fullName>MANUAL_ES_APPS</fullName>
            </value>
            <value>
                <fullName>MANUAL_XRS_PLANS</fullName>
            </value>
            <value>
                <fullName>MANUAL_XRS_APPS</fullName>
            </value>
            <value>
                <fullName>MANUAL_RN_BILLING</fullName>
            </value>
            <value>
                <fullName>SALESFORCE_CONTRACT_TRANSFER</fullName>
            </value>
            <value>
                <fullName>SALESFORCE_FRICTIONLESS</fullName>
            </value>
            <value>
                <fullName>SALESFORCE_NEW_TRANSFERS</fullName>
            </value>
            <value>
                <fullName>ERP_TRANSFER</fullName>
            </value>
            <value>
                <fullName>BILLING_ES_APPS</fullName>
            </value>
            <value>
                <fullName>BILLING_ES_PLANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>