force-app/main/default/objects/TXN_Log__c/fields/IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to check whether the transaction log has laready been processed by Batch Apex</description>
    <label>IsProcessed</label>
    <type>Checkbox</type>
</CustomField>