force-app/main/default/objects/TXN_Log__c/fields/Item_SKU_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_SKU_Product_Id__c</fullName>
    <description>Item/SKU/Product Id from Upstream system which maps to product Code in Salesforce</description>
    <label>Item_SKU_Product Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>