force-app/main/default/objects/TXN_Log__c/fields/Matching_Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>Matching_Customer_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Matching Customer Asset</description>
    <label>Matching Customer Asset</label>
    <referenceTo>Customer_Asset__c</referenceTo>
    <relationshipLabel>TXN Logs</relationshipLabel>
    <relationshipName>TXN_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>