force-app/main/default/objects/TXN_Log__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks field to hold the additional success or failed info for the batch apex job status</description>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>