force-app/main/default/objects/TXN_Log__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>MANUAL</fullName>
                <isActive>false</isActive>
                <label>MANUAL</label>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
                <isActive>false</isActive>
                <label>SALESFORCE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>