force-app/main/default/objects/TXN_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status Field to hold the status of batch processing job for the record</description>
    <label>Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>