force-app/main/default/objects/TXN_Log__c/fields/Sub_Event__c.field-meta.xml
<CustomField>
    <fullName>Sub_Event__c</fullName>
    <label>Sub Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub_Event1</fullName>
            </value>
            <value>
                <fullName>Sub_Event2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>