force-app/main/default/objects/TXN_Log__c/fields/TXN_Date__c.field-meta.xml
<CustomField>
    <fullName>TXN_Date__c</fullName>
    <description>Transaction Date</description>
    <label>TXN Date</label>
    <type>Date</type>
</CustomField>