force-app/main/default/objects/TXN_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Cust_ID__c</columns>
    <columns>Event__c</columns>
    <columns>Item_SKU_Product_Id__c</columns>
    <columns>Source_System__c</columns>
    <columns>Quantity__c</columns>
    <columns>IsProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>